--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -36,3 +36,33 @@ jobs:
         run: |
           python -m build --sdist
           twine check dist/*
+
+  build-docker-image:
+    name: 'Build docker images'
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout Infrastructure'
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Docker Meta
+        id: meta
+        uses: crazy-max/ghaction-docker-meta@v2
+        with:
+          images: |
+            quansight/nb-conda-store-kernels
+          tags: |
+            type=sha
+
+      - name: Build docker
+        uses: docker/build-push-action@v2
+        with:
+          file: "Dockerfile"
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+          push: false
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
